fix css white space at bottom

--- a/src/css/register.css
+++ b/src/css/register.css
@@ -4,16 +4,10 @@ Source Code: https://github.com/mikepro4/react-signup-form
 
 html {
     color: #000;
-    background: #FFF;
     font-size: 100%;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     font-family: sans-serif;
-}
-
-html, body {
-    height: 100%;
-    min-height: 100%;
 }
 
 a {
@@ -1274,14 +1268,8 @@ table td {
     background: #6bc5e6;
 }
 
-html {
-    width: 100%;
-    height: 100%;
-}
-
 body {
     position: absolute;
-    width: 100%;
     height: 100%;
     -webkit-font-smoothing: subpixel-antialiased;
     background-color: rgb(0, 0, 0);
